Fix collapse nav/move Media Asset buttons
-Fixed collapse nav on screens smaller than 768px wide
-Rearranged buttons on Media Assets page to be in the same positions as
the Playlist page
-Changed color of Refresh button and added glyphicon on Media Assets
page

--- a/app/css/bootstrap.css
+++ b/app/css/bootstrap.css
@@ -4193,7 +4193,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 @media (min-width: 768px) {
   .navbar-collapse {
-    width: auto;
     border-top: 0;
     -webkit-box-shadow: none;
             box-shadow: none;
